Added Custom Name.

--- a/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
+++ b/src/Blazor.Diagrams.Core/Blazor.Diagrams.Core.csproj
@@ -9,7 +9,7 @@
     <FileVersion>3.0.3</FileVersion>
     <RepositoryUrl>https://github.com/Blazor-Diagrams/Blazor.Diagrams</RepositoryUrl>
     <Version>3.0.3</Version>
-    <PackageId>Z.Blazor.Diagrams.Core</PackageId>
+    <PackageId>Z.Blazor.Diagrams.Core.WoCustom</PackageId>
     <PackageTags>blazor diagrams diagramming svg drag</PackageTags>
     <Product>Z.Blazor.Diagrams.Core</Product>
     <PackageIcon>ZBD.png</PackageIcon>
